# klfc

./: .gitignore  README.md  default.nix  keyboard-layout-files-creator.cabal  shell.nix
.github/workflows/: publish.yml
doc/: key.md  layout.md
doc/lists/: actions.md  deadkeys.md  positions.md
examples/: altgr.json  altgr_colemak.json  azerty.json  colemak.json  compose.json  dvorak.json  extend.json  function-keys.json  mods.json  qwerty.json
examples/output/: colemak.json
examples/output/ahk/: colemak.ahk  colemak_mod-dh.ahk
examples/output/keylayout/: colemak.keylayout  colemak_mod-dh.keylayout  install-system.sh  install-user.sh
examples/output/klc/: colemak.klc  colemak_mod-dh.klc
examples/output/pkl/: pkl.ini  pkl_mod-dh.ini
examples/output/pkl/layouts/colemak/: layout.ini
examples/output/pkl/layouts/colemak_mod-dh/: layout.ini
examples/output/tmk/: unimap.c  unimap_colemak.c  unimap_colemak_mod-dh.c
examples/output/xkb/: XCompose  install-local.sh  install-system.sh  install-xcompose.sh  run-session.sh  uninstall-system.sh
examples/output/xkb/keycodes/: colemak
examples/output/xkb/scripts/: functions.sh  install-xcompose.sh  uninstall-xcompose.sh
examples/output/xkb/symbols/: colemak
examples/output/xkb/types/: colemak
files/: install-local.sh  install-system.sh
files/keylayout/: install-system.sh  install-user.sh
files/xkb/: install-system.sh  install-xcompose.sh  run-session.sh  uninstall-system.sh  uninstall-xcompose.sh
files/xkb/scripts/: install-xcompose.sh
nix/: nixpkgs.nix  sources.json
scripts/: ActionToMd.hs  ParseCompose.hs  ParseKeysymdef.hs  PosToMd.hs  ToMarkdownList.hs  UpdateDoc.sh  Usage.hs
src/: Ahk.hs  FileType.hs  Filter.hs  JsonComments.hs  JsonPretty.hs  Keylayout.hs  Klc.hs  KlcParse.hs  Main.hs  Permutation.hs  Pkl.hs  PklParse.hs  PresetDeadKey.hs  PresetLayout.hs  Stream.hs  Tmk.hs  Util.hs  WithBar.hs  WithPlus.hs  Xkb.hs
src/Layout/: Action.hs  DeadKey.hs  Key.hs  Layout.hs  Mod.hs  Modifier.hs  ModifierEffect.hs  Pos.hs  Types.hs
src/Lookup/: Linux.hs  MacOS.hs  Tmk.hs  Windows.hs
src/Xkb/: General.hs  Keycodes.hs  Parse.hs  Symbols.hs  Types.hs  XCompose.hs
