name:           keyboard-layout-files-creator
version:        1.5.6
author:         Aldo Gunsing
license:        GPL-3
license-file:   LICENSE.txt
build-type:     Simple
cabal-version:  >=1.2

Extra-source-files:
  files/pkl/pkl.exe,
  files/xkb/run-session.sh,
  files/xkb/install-system.sh,
  files/xkb/uninstall-system.sh,
  files/xkb/scripts/install-xcompose.sh,
  files/xkb/scripts/uninstall-xcompose.sh,
  files/xkb/scripts/add-layout-to-xml.py,
  files/xkb/scripts/remove-layout-from-xml.py,
  files/xkb/scripts/functions.sh,
  files/xkb/scripts/add-models-to-xml.py,
  files/xkb/scripts/remove-models-from-xml.py,
  files/keylayout/install-user.sh,
  files/keylayout/install-system.sh

executable klfc
  hs-source-dirs:  src
  main-is:         Main.hs
  other-modules: Ahk
               , FileType
               , Filter
               , JsonComments
               , JsonPretty
               , Keylayout
               , Klc
               , KlcParse
               , Layout.Action
               , Layout.DeadKey
               , Layout.Key
               , Layout.Layout
               , Layout.Mod
               , Layout.Modifier
               , Layout.ModifierEffect
               , Layout.Pos
               , Layout.Types
               , Lookup.Linux
               , Lookup.MacOS
               , Lookup.Tmk
               , Lookup.Windows
               , Paths_keyboard_layout_files_creator
               , Permutation
               , Pkl
               , PklParse
               , PresetDeadKey
               , PresetLayout
               , Stream
               , Tmk
               , Util
               , WithBar
               , WithPlus
               , Xkb
               , Xkb.General
               , Xkb.Keycodes
               , Xkb.Parse
               , Xkb.Symbols
               , Xkb.Types
               , Xkb.XCompose

  build-depends:   base,
                   base-prelude >= 1.2.1,
                   text,
                   bytestring,
                   semigroups,
                   containers,
                   unordered-containers,
                   vector,
                   aeson >= 0.8.1.0 && < 2,
                   time >= 1.5,
                   mtl,
                   microlens-platform,
                   base-unicode-symbols,
                   containers-unicode-symbols,
                   megaparsec >= 7,
                   filepath,
                   directory,
                   optparse-applicative,
                   transformers,
                   fail,
                   file-embed,
                   xml,
                   chunked-data,
                   process >= 1.2.0.0
  ghc-options:     -Wall -Wcompat
